--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "deepcopy": "^2.1.0",
+    "moment": "^2.30.1",
     "vue": "^3.4.21",
+    "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "1.77.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
