--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": true, // true
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "types": [
