--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
+    "@types/node": "^22.14.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "deepcopy": "^2.1.0",
