--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noFallthroughCasesInSwitch": true
   },
   "types": [
-    "@types/bootstrap"
+    "@types/bootstrap",
+    "@types/node"
   ],
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
