--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
+    "noImplicitAny": false,
     "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -25,6 +26,6 @@
   "types": [
     "@types/bootstrap"
   ],
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "index.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
